# www

./: .gitmodules  404.html  CNAME  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: build.yml  delivery.yml  production.yml
app/: __init__.py  browser.py  landing.py  recommendations.py
hooks/: cname.py  hide_sidebars.py
overrides/: 404.html  home.html  main.html
overrides/partials/: header.html
public/: CNAME  index.md  trainers.md
public/static/css/: bubbles.css  signup-button.css  trainers.css
public/static/js/: trainers.js
search/: search_index.json
static/css/: iframe.css  recommenders.css  theme.css
static/js/: bubbles.js  hero.js  recommenders.js
trainers/: index.html
