[project]
name = "naukapythona.com"
description = "The source code to NaukaPythona.com."
authors = [
    { name = "bswck", email = "bartoszpiotrslawecki@gmail.com" }
]
dependencies = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.27",
    "mdx-include>=1.4.2",
    "markdown-exec>=1.9.2",
    "certifi>=2024.7.4",
]
readme = "README.md"
requires-python = ">= 3.10"
dynamic = ["version"]

[tool.rye]
virtual = true
managed = true
dev-dependencies = [
    "pip-audit>=2.7.3",
]
